[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[project]
name = "sshez"
description = "A Rust-powered command-line tool for managing SSH connections."
authors = [{ name = "Campbell Brown", email = "campbellbrown093@gmail.com" }]
readme = "README.md"
license-files = ["LICENSE"]
keywords = ["rust", "ssh"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/campbellmbrown/sshez"
source = "https://github.com/campbellmbrown/sshez"
issues = "https://github.com/campbellmbrown/sshez/issues"
